alignment problem fix

--- a/styles/web-flow.css
+++ b/styles/web-flow.css
@@ -107,7 +107,7 @@ nav {
 /* productive section */
 .productive {
     text-align: center;
-    margin: 116px;
+    margin: 150px;
     margin-top: 195px;
     padding: 50px;
     background-color: rgba(77, 71, 255, 0.401);
@@ -142,6 +142,7 @@ nav {
 }
 
 /* challange part */
+
 h2 {
     text-align: center;
     color: #222;
@@ -177,13 +178,12 @@ h2 {
 .challenge1-container .ag-font-para {
     font-size: 18px;
 }
-
 .card {
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    width: 300px;
+    width: 350px;
 }
 
 .card h3 {
